# mywhisper

./: .gitignore  README.md  app.py  benchmark.py  mychinesewhisper.py  mywhisper.py  openai_translate.py  pyproject.toml  test_translate.py  translate.html
