[project]
name = "mywhisper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.3",
    "openai[realtime]>=2.36.0",
    "pynput>=1.8.2",
    "pyperclip>=1.11.0",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "transformers>=5.8.1",
]
